--- a/SurRound/View/PostListCell/ImagePostListCell.xib
+++ b/SurRound/View/PostListCell/ImagePostListCell.xib
@@ -9,15 +9,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="436" id="KGk-i7-Jjw" customClass="ImagePostListCell" customModule="SurRound" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="458" id="KGk-i7-Jjw" customClass="ImagePostListCell" customModule="SurRound" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="458"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="436"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="458"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="F5l-ND-4mn" userLabel="Substrate View">
-                        <rect key="frame" x="16" y="60" width="288" height="360"/>
+                        <rect key="frame" x="16" y="72" width="288" height="370"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" image="Image_Placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="m4J-cq-nCo">
                                 <rect key="frame" x="0.0" y="0.0" width="288" height="288"/>
@@ -26,10 +26,10 @@
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="IbJ-8b-DfJ">
-                                <rect key="frame" x="4" y="324" width="103.5" height="28"/>
+                                <rect key="frame" x="4" y="327.5" width="103.5" height="34.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aRi-7v-o1t">
-                                        <rect key="frame" x="0.0" y="2" width="24" height="24"/>
+                                        <rect key="frame" x="0.0" y="5.5" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="aRi-7v-o1t" secondAttribute="height" multiplier="1:1" id="aiH-2w-Q2W"/>
                                             <constraint firstAttribute="width" constant="24" id="e8J-A5-ORg"/>
@@ -41,13 +41,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="666" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="te6-VX-ddV" userLabel="Liked Count Label">
-                                        <rect key="frame" x="24" y="5" width="33" height="18"/>
+                                        <rect key="frame" x="24" y="8.5" width="33" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCf-iv-O9u" userLabel="Review Button">
-                                        <rect key="frame" x="57" y="3" width="25.5" height="22"/>
+                                        <rect key="frame" x="57" y="6.5" width="25.5" height="22"/>
                                         <color key="tintColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="message.fill" catalog="system"/>
                                         <connections>
@@ -55,7 +55,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="87" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xgZ-3T-tOb">
-                                        <rect key="frame" x="82.5" y="5" width="21" height="18"/>
+                                        <rect key="frame" x="82.5" y="8.5" width="21" height="18"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                         <nil key="highlightedColor"/>
@@ -63,8 +63,8 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="INJ-1W-6qw">
-                                <rect key="frame" x="8" y="296" width="280" height="20"/>
-                                <fontDescription key="fontDescription" name="PingFangTC-Medium" family="PingFang TC" pointSize="14"/>
+                                <rect key="frame" x="8" y="300" width="280" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -73,7 +73,7 @@
                         <constraints>
                             <constraint firstItem="m4J-cq-nCo" firstAttribute="top" secondItem="F5l-ND-4mn" secondAttribute="top" id="2vm-eT-epc"/>
                             <constraint firstItem="IbJ-8b-DfJ" firstAttribute="top" secondItem="INJ-1W-6qw" secondAttribute="bottom" constant="8" id="7Nj-Ld-msJ"/>
-                            <constraint firstItem="INJ-1W-6qw" firstAttribute="top" secondItem="m4J-cq-nCo" secondAttribute="bottom" constant="8" id="7jh-P6-VSX"/>
+                            <constraint firstItem="INJ-1W-6qw" firstAttribute="top" secondItem="m4J-cq-nCo" secondAttribute="bottom" constant="12" id="7jh-P6-VSX"/>
                             <constraint firstItem="m4J-cq-nCo" firstAttribute="leading" secondItem="F5l-ND-4mn" secondAttribute="leading" id="Vhp-Hl-ze8"/>
                             <constraint firstAttribute="trailing" secondItem="m4J-cq-nCo" secondAttribute="trailing" id="cnv-5a-GOU"/>
                             <constraint firstAttribute="bottom" secondItem="IbJ-8b-DfJ" secondAttribute="bottom" constant="8" id="ed3-zx-SRY"/>
@@ -83,43 +83,56 @@
                         </constraints>
                     </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons_Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="nsO-dp-4ip">
-                        <rect key="frame" x="16" y="16" width="36" height="36"/>
+                        <rect key="frame" x="16" y="16" width="48" height="48"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="36" id="ED3-Qt-6zo"/>
+                            <constraint firstAttribute="width" constant="48" id="ED3-Qt-6zo"/>
                             <constraint firstAttribute="width" secondItem="nsO-dp-4ip" secondAttribute="height" id="GFF-hJ-0KA"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ipN-Sx-1e9">
-                        <rect key="frame" x="60" y="16" width="58" height="14.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
-                        <nil key="textColor"/>
+                        <rect key="frame" x="72" y="16" width="76.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPz-n3-VPR">
-                        <rect key="frame" x="60" y="34.5" width="31" height="14.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPz-n3-VPR">
+                        <rect key="frame" x="72" y="39.5" width="40" height="19.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                         <color key="textColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Datetime" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHb-HK-rez">
-                        <rect key="frame" x="252.5" y="16" width="51.5" height="14.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e1V-sI-YXx">
+                        <rect key="frame" x="274" y="16" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="CZS-cG-aRC"/>
+                            <constraint firstAttribute="width" secondItem="e1V-sI-YXx" secondAttribute="height" id="dAz-ew-8UZ"/>
+                        </constraints>
+                        <state key="normal" image="Icons_FollowUser"/>
+                        <connections>
+                            <action selector="followUser:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="ech-FA-2w5"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Datetime" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHb-HK-rez">
+                        <rect key="frame" x="160.5" y="18.5" width="58.5" height="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="nsO-dp-4ip" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="1AT-bl-Z2h"/>
+                    <constraint firstItem="xHb-HK-rez" firstAttribute="bottom" secondItem="ipN-Sx-1e9" secondAttribute="bottom" id="DG6-O3-BIv"/>
                     <constraint firstItem="F5l-ND-4mn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="FMc-Ub-xEl"/>
                     <constraint firstItem="F5l-ND-4mn" firstAttribute="top" secondItem="nsO-dp-4ip" secondAttribute="bottom" constant="8" id="FgB-VD-sDr"/>
                     <constraint firstAttribute="trailing" secondItem="F5l-ND-4mn" secondAttribute="trailing" constant="16" id="MXk-KN-b2I"/>
                     <constraint firstItem="ipN-Sx-1e9" firstAttribute="leading" secondItem="nsO-dp-4ip" secondAttribute="trailing" constant="8" id="OFO-k5-hh0"/>
                     <constraint firstItem="rPz-n3-VPR" firstAttribute="top" secondItem="ipN-Sx-1e9" secondAttribute="bottom" constant="4" id="Pu3-SJ-awH"/>
+                    <constraint firstItem="e1V-sI-YXx" firstAttribute="top" secondItem="nsO-dp-4ip" secondAttribute="top" id="WHg-My-Z3U"/>
                     <constraint firstItem="rPz-n3-VPR" firstAttribute="leading" secondItem="nsO-dp-4ip" secondAttribute="trailing" constant="8" id="Yrn-XH-x46"/>
+                    <constraint firstItem="e1V-sI-YXx" firstAttribute="trailing" secondItem="m4J-cq-nCo" secondAttribute="trailing" id="cKJ-0c-elL"/>
                     <constraint firstItem="nsO-dp-4ip" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="gV0-2q-sHX"/>
-                    <constraint firstAttribute="trailing" secondItem="xHb-HK-rez" secondAttribute="trailing" constant="16" id="jyp-Mu-Ij2"/>
-                    <constraint firstItem="xHb-HK-rez" firstAttribute="top" secondItem="ipN-Sx-1e9" secondAttribute="top" id="lDS-95-rZv"/>
                     <constraint firstItem="ipN-Sx-1e9" firstAttribute="top" secondItem="nsO-dp-4ip" secondAttribute="top" id="nZH-nD-JzG"/>
+                    <constraint firstItem="xHb-HK-rez" firstAttribute="leading" secondItem="ipN-Sx-1e9" secondAttribute="trailing" constant="12" id="p6G-Ye-gh1"/>
                     <constraint firstAttribute="bottom" secondItem="F5l-ND-4mn" secondAttribute="bottom" constant="16" id="uYF-kw-ezh"/>
                 </constraints>
             </tableViewCellContentView>
@@ -128,6 +141,7 @@
                 <outlet property="avatarImageView" destination="nsO-dp-4ip" id="iMn-mC-q3v"/>
                 <outlet property="captionTextLabel" destination="INJ-1W-6qw" id="T2F-M1-wJ5"/>
                 <outlet property="datetimeLabel" destination="xHb-HK-rez" id="TD6-vw-AI4"/>
+                <outlet property="followButton" destination="e1V-sI-YXx" id="6jz-eK-IJd"/>
                 <outlet property="likedButton" destination="aRi-7v-o1t" id="CwV-LH-3aw"/>
                 <outlet property="likedCountLabel" destination="te6-VX-ddV" id="cSF-1j-VlR"/>
                 <outlet property="placeNameLabel" destination="rPz-n3-VPR" id="nOW-2v-2ZS"/>
@@ -137,11 +151,12 @@
                 <outlet property="substrateView" destination="F5l-ND-4mn" id="J5T-q8-2qb"/>
                 <outlet property="usernameLabel" destination="ipN-Sx-1e9" id="Da2-3e-iLG"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="72.321428571428569"/>
+            <point key="canvasLocation" x="137.68115942028987" y="79.6875"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="Icons_Avatar" width="32" height="32"/>
+        <image name="Icons_FollowUser" width="32" height="32"/>
         <image name="Image_Placeholder" width="750" height="750"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="message.fill" catalog="system" width="128" height="113"/>
