--- a/SurRound/View/Home/Base.lproj/Home.storyboard
+++ b/SurRound/View/Home/Base.lproj/Home.storyboard
@@ -31,7 +31,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="StoryPreviewCell" translatesAutoresizingMaskIntoConstraints="NO" id="gnp-Zh-ksB" customClass="StoryPreviewCell" customModule="SurRound" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="12.5" width="59" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Wy7-RM-eK4">
