--- a/SurRound/View/Post+Story/Post/BodyTableViewCell.xib
+++ b/SurRound/View/Post+Story/Post/BodyTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16085" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16078.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,32 +16,37 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="117"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5B3-iI-J4w">
-                        <rect key="frame" x="16" y="8" width="288" height="73"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5B3-iI-J4w">
+                        <rect key="frame" x="16" y="8" width="288" height="63"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="OBg-NX-9pb"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="heart" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="52Y-Lb-ogK">
-                        <rect key="frame" x="16" y="90.5" width="20" height="17.5"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpN-jw-Rg5">
+                        <rect key="frame" x="16" y="79" width="21" height="22"/>
                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </imageView>
+                        <state key="normal" image="heart" catalog="system"/>
+                    </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n2z-f8-fzY">
-                        <rect key="frame" x="60" y="88" width="23" height="22"/>
+                        <rect key="frame" x="45" y="79" width="23" height="22"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                         <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <state key="normal" image="text.bubble" catalog="system"/>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="n2z-f8-fzY" firstAttribute="centerY" secondItem="52Y-Lb-ogK" secondAttribute="centerY" id="LwV-Rv-SLV"/>
-                    <constraint firstItem="52Y-Lb-ogK" firstAttribute="leading" secondItem="5B3-iI-J4w" secondAttribute="leading" id="MTG-8H-DUh"/>
+                    <constraint firstAttribute="bottom" secondItem="tpN-jw-Rg5" secondAttribute="bottom" constant="16" id="J4y-am-8ct"/>
                     <constraint firstItem="5B3-iI-J4w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="OMj-s8-54L"/>
-                    <constraint firstItem="52Y-Lb-ogK" firstAttribute="top" secondItem="5B3-iI-J4w" secondAttribute="bottom" constant="8" id="XT5-tQ-Gjr"/>
-                    <constraint firstAttribute="bottom" secondItem="52Y-Lb-ogK" secondAttribute="bottom" constant="8" id="XdM-cV-bmp"/>
                     <constraint firstItem="5B3-iI-J4w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="dGJ-je-oZd"/>
-                    <constraint firstItem="n2z-f8-fzY" firstAttribute="leading" secondItem="52Y-Lb-ogK" secondAttribute="trailing" constant="24" id="rS6-vh-Zak"/>
+                    <constraint firstItem="tpN-jw-Rg5" firstAttribute="top" secondItem="5B3-iI-J4w" secondAttribute="bottom" constant="8" id="eQg-TA-6Hw"/>
+                    <constraint firstItem="tpN-jw-Rg5" firstAttribute="leading" secondItem="5B3-iI-J4w" secondAttribute="leading" id="mXh-3f-usN"/>
                     <constraint firstAttribute="trailing" secondItem="5B3-iI-J4w" secondAttribute="trailing" constant="16" id="wEv-Ck-8lw"/>
+                    <constraint firstItem="n2z-f8-fzY" firstAttribute="centerY" secondItem="tpN-jw-Rg5" secondAttribute="centerY" id="xHr-3y-Vdh"/>
+                    <constraint firstItem="n2z-f8-fzY" firstAttribute="leading" secondItem="tpN-jw-Rg5" secondAttribute="trailing" constant="8" id="zFa-FM-MTV"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -52,7 +57,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="heart" catalog="system" width="64" height="54"/>
-        <image name="text.bubble" catalog="system" width="64" height="54"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="text.bubble" catalog="system" width="128" height="110"/>
     </resources>
 </document>
